2022-10-26
* Input validation now is implemented in a new library called io.sh.
* Created two functions: input_is_empty and input_is_file_or_pipe. 

2022-09-15
* Functional input validation of STDIN/STDOUT (issue #3 in GitHub). Although not yet fully implemented. It partially works on bb_get_fasta_headers but has to be implemented as function.

2022-09-14
* Minor changes to error msg in in bb_get_fasta_headers.
* Issue #2 in Github marked as solved.

2022-05-15
* Fixed bug in setup_environment, that prevented "/usr/local/bin" to be searched in $PATH.

2022-05-15
* "realpath" changed for file::full_path.

2022-05-13
* bb_native is now the only library used in BB. bash-utility and bb_native  were merged.
* new function file::is_fasta added to  bb_native/file.sh.
* new function file::is_multiple_fasta added to  bb_native/file.sh.
* new function file::is_fastq added to  bb_native/file.sh.
* New test data for above functions was added.
* No functional function file::is_vcf added.
* No functional functions file::is_vcf, file::is_bed, file::is_fast5 were added.
* Most functions were standarized to utput 0, 1 or 2.

2022-05-10
* Functional routine to read from STDIN added to bb_get_fasta_headers.
* Theres still a bug, since calling script without arguments makes it wait forever because of "cat".

2022-05-09
* Environment vars starting with "BB_" where renamed to "BIOBASH_"
* Added biobashrc_osx. This is a file to source only for development.
* New bb_native functions to validate fasta (isFasta) and multiple fasta files (isMultipleFasta).

2022-05-08
* New BIOBASH_OS variable added in setup_environment. Replaces BIOBASH_OS_osx/linux vars.
* bb_get_fasta_headers is used as started ponit to create a "model" script forfuther dev. 

2022-05-06
* Added unistallation script
* Fixed BIOBASH_BIN_OS issue that was not getting the path to OS specific binaries.

2022-05-03
* checkdependencies and installbiobash scripts are stable and perform the minimum necessary